cf-vpc-elb-asg.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Conditions": {},
  "Description": "VPC, ELB, ASG",
  "Mappings": {},
  "Metadata": {},
  "Outputs": {
    "VPCId": {
      "Description": "The VPCId for this stack.",
      "Value": {
        "Ref": "DevVPC"
      }
    }
  },
  "Resources": {
    "DevVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "dedicated",
        "Tags": [
          {
            "Key": "Name",
            "Value": "DevVPC"
          }
        ]
      }
    },
    "DevInstance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "SecurityGroups": [
          {
            "Ref": "DevSecurityGroup"
          },
          {
            "Ref": "Port80SecurityGroup"
          }
        ],
        "KeyName": "breanne-10-feb",
        "ImageId": "ami-a17b96c1"
      }
    },
    "DevSecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable SSH access",
        "SecurityGroupIngress": {
          "IpProtocol": "TCP",
          "FromPort": 22,
          "ToPort": 22,
          "CidrIp": "0.0.0.0/0"
        }
      }
    },
    "Port80SecurityGroup": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Enable HTTP access",
        "SecurityGroupIngress": {
          "IpProtocol": "TCP",
          "FromPort": 80,
          "ToPort": 80,
          "CidrIp": "0.0.0.0/0"
        }
      }
    },
    "AndAnELB": {
      "Type": "AWS::ElasticLoadBalancing::LoadBalancer",
      "Properties": {
        "LoadBalancerName": "Chester",
        "AvailabilityZones": [{ "Fn::GetAtt": ["DevInstance", "AvailabilityZone"] }],
        "Listeners": [{
          "InstancePort": 80,
          "LoadBalancerPort": 80,
          "Protocol": "HTTP"
        }]
      }
    },
    "AnASGToo": {
      "Type": "AWS::AutoScaling::AutoScalingGroup",
      "Properties": {
        "AvailabilityZones": [{ "Fn::GetAtt": ["DevInstance", "AvailabilityZone"] }],
        "MaxSize": 4,
        "MinSize": 1,
        "LoadBalancerNames": [ { "Ref": "AndAnELB" } ],
        "InstanceId": { "Ref" : "DevInstance"}
      }
    },
    "AlsoASubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {"Ref": "DevVPC"},
        "CidrBlock": "10.0.0.0/16",
        "AvailabilityZone": { "Fn::GetAtt": ["DevInstance", "AvailabilityZone"] }
      }
    }
  }
}
